# sf

./: CLAUDE.md  Cargo.toml  Makefile  docker-compose.yml  nginx.conf
bins/: Cargo.toml
bins/src/: main.rs
crates/backup/: Cargo.toml
crates/backup/src/: lib.rs  storage.rs
crates/bg-process/: Cargo.toml
crates/bg-process/src/: lib.rs
crates/bg-process/src/process/: ai_messages.rs  birthdays.rs  freeze.rs  mod.rs  notifier.rs  requests.rs  rewards.rs  subscription.rs  training.rs  user_sync.rs
crates/booking/: Cargo.toml
crates/booking/src/: lib.rs  payer.rs
crates/bot/core/: Cargo.toml
crates/bot/core/src/: bot.rs  callback_data.rs  confirm.rs  context.rs  err.rs  lib.rs  state.rs  widget.rs
crates/bot/core/src/err/: mod.rs  training.rs
crates/bot/core/src/handlers/: callback.rs  error.rs  message.rs  mod.rs
crates/bot/core/src/script/: mod.rs
crates/bot/core/src/views/: ask.rs  confirm.rs  done.rs  mod.rs
crates/bot/finance/: Cargo.toml
crates/bot/finance/src/: history.rs  in_out.rs  lib.rs  marketing.rs  operation.rs  rent.rs  stat.rs
crates/bot/finance/src/employees/: delete.rs  list.rs  new.rs  profile.rs  reward.rs
crates/bot/locations/: Cargo.toml
crates/bot/locations/src/: create.rs  edit.rs  lib.rs  view.rs
crates/bot/main/: Cargo.toml
crates/bot/main/src/: lib.rs  system.rs
crates/bot/main/src/system/: subscription.rs
crates/bot/main/src/view/: common_location.rs  menu.rs  mod.rs  signup.rs
crates/bot/marketing/: Cargo.toml
crates/bot/marketing/src/: lib.rs
crates/bot/marketing/src/requests/: create.rs  history.rs  mod.rs
crates/bot/marketing/src/statistics/: advertising.rs  budget.rs  marketing.rs  mod.rs
crates/bot/users/: Cargo.toml
crates/bot/users/src/: come_from.rs  comments.rs  family.rs  freeze.rs  history.rs  lib.rs  notification.rs  profile.rs  rewards.rs  rights.rs  set_ai_prompt.rs  set_birthday.rs  set_fio.rs  set_phone.rs
crates/bot/users/src/family/: add_member.rs
crates/bot/users/src/rewards/: recalc.rs
crates/bot/users/src/subscriptions/: item_price.rs  mod.rs  program.rs
crates/business-error/: Cargo.toml
crates/business-error/src/: calendar.rs  lib.rs  request.rs  trainings.rs  user.rs
crates/core/error/: Cargo.toml
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/history/: Cargo.toml
crates/history/src/model/: mod.rs
crates/history/src/service/: mod.rs  user.rs
crates/history/src/storage/: mod.rs
crates/ledger/: Cargo.toml
crates/ledger/src/: lib.rs  training.rs
crates/ledger/src/service/: backup.rs  calendar.rs  history.rs  mod.rs  notification.rs  programs.rs  requests.rs  rewards.rs  subscriptions.rs  treasury.rs
crates/ledger/src/service/statistics/: advertising.rs  calendar.rs  clients.rs  history.rs  mod.rs  treasury.rs
crates/ledger/src/service/users/: ai.rs  comments.rs  employee.rs  family.rs  mod.rs  statistics.rs  subscription.rs
crates/model/: Cargo.toml
crates/model/src/: day.rs  history.rs  ids.rs  lib.rs  notification.rs  payment.rs  program.rs  reward.rs  rights.rs  slot.rs  subscription.rs  training.rs
crates/model/src/statistics/: advertising.rs  mod.rs  user.rs
crates/model/src/treasury/: aggregate.rs  mod.rs  subs.rs
crates/model/src/user/: employee.rs  family.rs  mod.rs
crates/rewards/: Cargo.toml
crates/rewards/src/model/: mod.rs
crates/rewards/src/service/: mod.rs
crates/rewards/src/storage/: mod.rs
crates/sales/: Cargo.toml
crates/sales/src/: error.rs  lib.rs
crates/services/: Cargo.toml
crates/services/booking/src/: lib.rs
crates/services/calendar/: Cargo.toml
crates/services/calendar/src/: error.rs
crates/services/calendar/src/model/: mod.rs
crates/services/calendar/src/service/: mod.rs
crates/services/calendar/src/storage/: mod.rs
crates/services/employee/: Cargo.toml
crates/services/employee/src/: lib.rs
crates/services/history/src/service/: mod.rs  treasury.rs  user.rs
crates/services/history/src/storage/: mod.rs
crates/services/images/: Cargo.toml
crates/services/images/src/: lib.rs
crates/services/images/src/model/: mod.rs
crates/services/images/src/service/: mod.rs
crates/services/images/src/storage/: mod.rs
crates/services/locations/: Cargo.toml
crates/services/locations/src/: lib.rs
crates/services/locations/src/model/: mod.rs
crates/services/locations/src/service/: mod.rs
crates/services/locations/src/storage/: mod.rs
crates/services/news/: Cargo.toml
crates/services/news/src/model/: mod.rs
crates/services/news/src/service/: mod.rs
crates/services/news/src/storage/: mod.rs
crates/services/payment/yookassa/: Cargo.toml
crates/services/payment/yookassa/src/: lib.rs
crates/services/program/: Cargo.toml
crates/services/program/src/model/: mod.rs
crates/services/program/src/storage/: mod.rs
crates/services/requests/: Cargo.toml
crates/services/requests/src/: lib.rs
crates/services/requests/src/model/: mod.rs
crates/services/sales/src/: error.rs
crates/services/src/: error.rs  lib.rs  store.rs  training.rs
crates/services/training_adjuster/src/: lib.rs
crates/services/trainings/: Cargo.toml
crates/services/trainings/src/: error.rs
crates/services/treasury/: Cargo.toml
crates/services/users/: Cargo.toml
crates/services/users/src/: error.rs  lib.rs
crates/stat/: Cargo.toml
crates/stat/src/models/: advertising.rs  mod.rs
crates/stat/src/services/: advertising.rs  mod.rs
crates/storage/: Cargo.toml
crates/storage/src/: calendar.rs  history.rs  lib.rs  notification.rs  program.rs  requests.rs  rewards.rs  session.rs  subscription.rs  treasury.rs
crates/storage/src/user/: employee.rs  mod.rs
crates/subscription/: Cargo.toml
crates/subscription/src/model/: mod.rs
crates/subscription/src/service/: mod.rs
crates/subscription/src/storage/: mod.rs
crates/training_adjuster/: Cargo.toml
mini-app/main/: Cargo.toml  build.rs
mini-app/main/src/: adapters.rs  ctx.rs  lib.rs
mini-app/main/src/auth/: codes.rs  ctx.rs  interceptor.rs  jwt.rs  mod.rs  tg_token.rs
mini-app/main/src/user/: map.rs  mod.rs
(+315 files in other folders)
