[workspace.package]
edition = "2024"
license = "Apache-2.0"
publish = false
version = "0.1.0"

[workspace]
exclude = []

members = [
  "crates/bg-process",
  "crates/bot/*",
  "bins",
  "crates/services/payment/yookassa",
  "crates/bot/business-error",
  "api/main",
  "crates/services/stat",
  "crates/services",
  "crates/backup",
  "crates/services/rewards",
  "crates/services/trainings",
  "crates/core/*",
  "crates/services/program",
  "crates/services/treasury",
  "crates/services/subscription",
  "crates/services/history",
  "crates/services/users",
  "crates/services/requests",
  "crates/services/calendar",
  "crates/services/booking",
  "crates/services/sales",
  "crates/services/training_adjuster",
  "crates/services/employee",
]

resolver = "2"

[workspace.dependencies]
ai = {path = "crates/core/ai"}
backup = {path = "crates/backup"}
bg-process = {path = "crates/bg-process"}

bot-calendar = {path = "crates/bot/calendar"}
bot-core = {path = "crates/bot/core"}
bot-couch = {path = "crates/bot/couch"}
bot-finance = {path = "crates/bot/finance"}
bot-main = {path = "crates/bot/main"}
bot-marketing = {path = "crates/bot/marketing"}
bot-statistic = {path = "crates/bot/statistic"}
bot-subscription = {path = "crates/bot/subscription"}
bot-trainings = {path = "crates/bot/trainings"}
bot-users = {path = "crates/bot/users"}
bot-viewer = {path = "crates/bot/viewer"}

booking = {path = "crates/services/booking"}
business-error = {path = "crates/bot/business-error"}
calendar = {path = "crates/services/calendar"}
decimal = {path = "crates/core/decimal"}
employee = {path = "crates/services/employee"}
env = {path = "crates/core/env"}
graph = {path = "crates/core/graph"}
history = {path = "crates/services/history"}
ident = {path = "crates/core/ident"}
api = {path = "api/main"}
program = {path = "crates/services/program"}
requests = {path = "crates/services/requests"}
rewards = {path = "crates/services/rewards"}
rights = {path = "crates/core/rights"}
sales = {path = "crates/services/sales"}
services = {path = "crates/services"}
stat = {path = "crates/services/stat"}
store = {path = "crates/core/store"}
subscription = {path = "crates/services/subscription"}
time = {path = "crates/core/time"}
training_adjuster = {path = "crates/services/training_adjuster"}
trainings = {path = "crates/services/trainings"}
treasury = {path = "crates/services/treasury"}
tx_macro = {path = "crates/core/tx_macro"}
users = {path = "crates/services/users"}
yookassa = {path = "crates/services/payment/yookassa"}

#libs 
arc-swap = "1.7.1"
async-trait = "0.1.81"
bincode = "1.3.3"
bs58 = "0.5.1"
bson = {version = "2", features = ["chrono-0_4"]}
chrono = {version = "0.4.38", features = ["serde"]}
color-eyre = "0.6"
csv = "1.3.1"
dashmap = "6.1.0"
derive_more = "0.99"
dotenv = "0.15.0"
eyre = "0.6"
futures = "0.3"
futures-util = "0.3.30"
hex = "0.4.3"
hmac = "0.12.1"
itertools = "0.2.2"
jsonwebtoken = "9.3.0"
mongodb = {version = "3.0"}
parking_lot = "0.12.3"
plotly = {version = "0.12", features = ["kaleido", "kaleido_download"]}
proc-macro2 = "1.0"
prost = "0.13.5"
quote = "1.0"
rand = "0.8.4"
reqwest = {version = "0.12.9", features = ["json"]}
serde = "1"
serde_json = "1"
serde_qs = "0.14.0"
serde_with = "3.9.0"
sha2 = "0.10"
strum = {version = "0.26", features = ["derive"]}
syn = "1.0"
teloxide = {version = "0.13", features = ["macros"]}
thiserror = "1"
tokio = {version = "1", features = ["full"]}
tokio-cron-scheduler = {version = "0.13.0", features = ["english"]}
tonic = "0.13.0"
tonic-build = "0.13.0"
tonic-web = "0.13.0"
tower = "0.5.2"
tower-http = "0.6.2"
tracing = "0.1.41"
tracing-loki = "0.2"
tracing-subscriber = "0.3"
url = "2"
uuid = "1.11.0"
zip = "2.2.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
