[package]
name = "ledger-cli"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
bot-main.workspace = true
ledger.workspace = true
mini-app-main.workspace = true
storage.workspace = true
bg-process.workspace = true
env.workspace = true

color-eyre.workspace = true
dotenv.workspace = true
eyre.workspace = true
tracing.workspace = true
tracing-subscriber = {workspace = true, features = ["fmt", "env-filter"]}
tokio.workspace = true
