[package]
name = "ledger-cli"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
bg-process.workspace = true
bot-main.workspace = true
color-eyre.workspace = true
dotenv.workspace = true
env.workspace = true
eyre.workspace = true
mini-app-main.workspace = true
services.workspace = true
tokio.workspace = true
tracing-subscriber = {workspace = true, features = ["fmt", "env-filter"]}
tracing.workspace = true
