[package]
name = "bg-process"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
bot-core.workspace = true
bot-main.workspace = true
bot-viewer.workspace = true
chrono.workspace = true
eyre.workspace = true
futures-util.workspace = true
tracing.workspace = true
mongodb.workspace = true
teloxide.workspace = true
tokio-cron-scheduler.workspace = true
tokio.workspace = true
tx_macro.workspace = true
ai.workspace = true
services.workspace = true
trainings.workspace = true
store.workspace = true
rewards.workspace = true
program.workspace = true
