[package]
name = "bg-process"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
ai.workspace = true
async-trait.workspace = true
booking.workspace = true
bot-core.workspace = true
bot-main.workspace = true
bot-viewer.workspace = true
chrono.workspace = true
employee.workspace = true
eyre.workspace = true
futures-util.workspace = true
ident.workspace = true
mongodb.workspace = true
program.workspace = true
requests.workspace = true
rewards.workspace = true
rights.workspace = true
services.workspace = true
store.workspace = true
teloxide.workspace = true
tokio-cron-scheduler.workspace = true
tokio.workspace = true
tracing.workspace = true
trainings.workspace = true
tx_macro.workspace = true
users.workspace = true
subscription.workspace = true