[package]
name = "booking"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
bson.workspace = true
calendar.workspace = true
chrono.workspace = true
decimal.workspace = true
eyre.workspace = true
history.workspace = true
ident.workspace = true
store.workspace = true
subscription.workspace = true
thiserror.workspace = true
trainings.workspace = true
tx_macro.workspace = true
users.workspace = true

[dev-dependencies]
program.workspace = true
