[package]
name = "business-error"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
bson.workspace = true
calendar.workspace = true
chrono.workspace = true
eyre.workspace = true
ident.workspace = true
mongodb.workspace = true
requests.workspace = true
services.workspace = true
store.workspace = true
teloxide.workspace = true
thiserror.workspace = true
trainings.workspace = true
users.workspace = true
