[package]
name = "error"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
bson.workspace = true
chrono.workspace = true
model.workspace = true
thiserror.workspace = true
mongodb.workspace = true
eyre.workspace = true
trainings.workspace = true
