[package]
name = "history"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
bson.workspace = true
chrono.workspace = true
decimal.workspace = true
eyre.workspace = true
ident.workspace = true
mongodb.workspace = true
serde.workspace = true
subscription.workspace = true
store.workspace = true
trainings.workspace = true
treasury.workspace = true
users.workspace = true