[package]
name = "ledger"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
ai.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
bson.workspace = true
chrono.workspace = true
csv.workspace = true
decimal.workspace = true
env.workspace = true
error.workspace = true
eyre.workspace = true
futures-util.workspace = true
model.workspace = true
mongodb.workspace = true
program.workspace = true
serde.workspace = true
serde_json.workspace = true
storage.workspace = true
store.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
trainings.workspace = true
tx_macro.workspace = true
yookassa.workspace = true
zip.workspace = true
