[package]
name = "model"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
bincode.workspace = true
bson.workspace = true
chrono.workspace = true
eyre.workspace = true
hex.workspace = true
rand.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
