[package]
name = "rewards"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
bson.workspace = true
chrono.workspace = true
decimal.workspace = true
eyre.workspace = true
serde.workspace = true
trainings.workspace = true
mongodb.workspace = true
store.workspace = true
ident.workspace = true
