[package]
name = "sales"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
bson.workspace = true
decimal.workspace = true
eyre.workspace = true
history.workspace = true
ident.workspace = true
mongodb.workspace = true
program.workspace = true
store.workspace = true
subscription.workspace = true
thiserror.workspace = true
treasury.workspace = true
tx_macro.workspace = true
users.workspace = true
