[package]
name = "services"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
ai.workspace = true
backup.workspace = true
bson.workspace = true
chrono.workspace = true
decimal.workspace = true
env.workspace = true
error.workspace = true
eyre.workspace = true
futures-util.workspace = true
ledger.workspace = true
model.workspace = true
mongodb.workspace = true
stat.workspace = true
storage.workspace = true
store.workspace = true
thiserror.workspace = true
tx_macro.workspace = true
yookassa.workspace = true
trainings.workspace = true
rewards.workspace = true
program.workspace = true
