[package]
name = "services"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
ai.workspace = true
backup.workspace = true
bson.workspace = true
calendar.workspace = true
chrono.workspace = true
decimal.workspace = true
env.workspace = true
error.workspace = true
eyre.workspace = true
futures-util.workspace = true
history.workspace = true
ident.workspace = true
mongodb.workspace = true
program.workspace = true
requests.workspace = true
rewards.workspace = true
stat.workspace = true
store.workspace = true
subscription.workspace = true
thiserror.workspace = true
trainings.workspace = true
treasury.workspace = true
tx_macro.workspace = true
users.workspace = true
yookassa.workspace = true
