[package]
edition.workspace = true
license.workspace = true
name = "stat"
publish.workspace = true
version.workspace = true

[dependencies]
ai.workspace = true
decimal.workspace = true
ledger.workspace = true
model.workspace = true
storage.workspace = true
store.workspace = true
time.workspace = true

chrono.workspace = true
error.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
