[package]
name = "stat"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
ai.workspace = true
bson.workspace = true
chrono.workspace = true
decimal.workspace = true
error.workspace = true
eyre.workspace = true
history.workspace = true
ident.workspace = true
requests.workspace = true
serde.workspace = true
serde_json.workspace = true
store.workspace = true
time.workspace = true
trainings.workspace = true
users.workspace = true
