[package]
name = "storage"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
bson.workspace = true
chrono.workspace = true
dashmap.workspace = true
eyre.workspace = true
futures-util.workspace = true
model.workspace = true
mongodb.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
strum.workspace = true
tracing.workspace = true
decimal.workspace = true

