[package]
name = "bot-core"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
bincode.workspace = true
bs58.workspace = true
business-error.workspace = true
chrono.workspace = true
env.workspace = true
eyre.workspace = true
futures-util.workspace = true
hex.workspace = true
ident.workspace = true
itertools.workspace = true
mongodb.workspace = true
parking_lot.workspace = true
rights.workspace = true
serde.workspace = true
serde_json.workspace = true
services.workspace = true
store.workspace = true
strum.workspace = true
teloxide.workspace = true
tracing.workspace = true
trainings.workspace = true
users.workspace = true
