[package]
name = "bot-finance"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
bincode.workspace = true
bot-core.workspace = true
bot-trainings.workspace = true
bot-users.workspace = true
bot-viewer.workspace = true
chrono.workspace = true
decimal.workspace = true
error.workspace = true
eyre.workspace = true
hex.workspace = true
itertools.workspace = true
mongodb.workspace = true
serde.workspace = true
strum.workspace = true
teloxide.workspace = true
time.workspace = true
tracing.workspace = true
