[package]
name = "bot-finance"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
bincode.workspace = true
bot-core.workspace = true
bot-trainings.workspace = true
bot-users.workspace = true
bot-viewer.workspace = true
chrono.workspace = true
decimal.workspace = true
employee.workspace = true
error.workspace = true
eyre.workspace = true
hex.workspace = true
ident.workspace = true
itertools.workspace = true
mongodb.workspace = true
rights.workspace = true
serde.workspace = true
strum.workspace = true
teloxide.workspace = true
time.workspace = true
tracing.workspace = true
treasury.workspace = true
users.workspace = true
