[package]
name = "bot-main"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true


[dependencies]
async-trait.workspace = true
bincode.workspace = true
bot-calendar.workspace = true
bot-core.workspace = true
bot-couch.workspace = true
bot-finance.workspace = true
bot-marketing.workspace = true
bot-subscription.workspace = true
bot-trainings.workspace = true
bot-users.workspace = true
bot-viewer.workspace = true
env.workspace = true

chrono.workspace = true
eyre.workspace = true
hex.workspace = true
itertools.workspace = true
ledger.workspace = true
model.workspace = true
mongodb.workspace = true
serde.workspace = true
storage.workspace = true
store.workspace = true
strum.workspace = true
teloxide.workspace = true
tracing.workspace = true
services.workspace = true

