[package]
name = "bot-marketing"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
ai.workspace = true
async-trait.workspace = true
bincode.workspace = true
bot-core.workspace = true
bot-viewer.workspace = true
chrono.workspace = true
decimal.workspace = true
business-error.workspace = true
eyre.workspace = true
graph.workspace = true
hex.workspace = true
ident.workspace = true
itertools.workspace = true
mongodb.workspace = true
requests.workspace = true
rights.workspace = true
serde.workspace = true
strum.workspace = true
teloxide.workspace = true
time.workspace = true
tracing.workspace = true
users.workspace = true
