[package]
name = "bot-users"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
ai.workspace = true
async-trait.workspace = true
bincode.workspace = true
bot-core.workspace = true
bot-trainings.workspace = true
bot-viewer.workspace = true
rewards.workspace = true

chrono.workspace = true
decimal.workspace = true
eyre.workspace = true
hex.workspace = true
itertools.workspace = true
mongodb.workspace = true
serde.workspace = true
strum.workspace = true
teloxide.workspace = true
tracing.workspace = true
