[package]
name = "employee"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
bson.workspace = true
calendar.workspace = true
chrono.workspace = true
decimal.workspace = true
eyre.workspace = true
history.workspace = true
ident.workspace = true
program.workspace = true
rewards.workspace = true
store.workspace = true
trainings.workspace = true
treasury.workspace = true
tx_macro.workspace = true
users.workspace = true
